# fullstack-ml-f1-prediction

./: .gitignore  pyproject.toml  readme.md
feature-pipeline/: feature-pipeline.ipynb  feature-pipeline.py  pyproject.toml
