[tool.poetry]
name = "feature-pipeline"
version = "0.1.0"
description = ""
authors = ["jaeyow <jaeyow@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
metaflow = "^2.10.8"
comet-ml = "^3.35.5"
duckdb = "^0.9.2"
numpy = "^1.26.2"
pandas = "^2.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
